--- a/usr/src/librealsense2-dkms-1.3.24/dkms.conf
+++ b/usr/src/librealsense2-dkms-1.3.24/dkms.conf
@@ -49,9 +49,17 @@ PATCH_MATCH[7]="5.19"
 PATCH[8]="10-realsense-camera-formats-6.2.patch"
 PATCH[9]="11-realsense-metadata-6.2.patch"
 PATCH[10]="12-realsense-makefile-adaptation-6.2.patch"
-PATCH_MATCH[8]="^(6.[0|1|2|3|4])"
-PATCH_MATCH[9]="^(6.[0|1|2|3|4])"
-PATCH_MATCH[10]="^(6.[0|1|2|3|4])"
+PATCH_MATCH[8]="6.2"
+PATCH_MATCH[9]="6.2"
+PATCH_MATCH[10]="6.2"
+
+#Patches for Kernel 6.1
+PATCH[11]="13-realsense-camera-formats-6.1.patch"
+PATCH[12]="14-realsense-metadata-6.1.patch"
+PATCH[13]="15-realsense-makefile-adaptation-6.1.patch"
+PATCH_MATCH[11]="6.1"
+PATCH_MATCH[12]="6.1"
+PATCH_MATCH[13]="6.1"
 
 BUILT_MODULE_NAME[0]="uvcvideo"
 BUILT_MODULE_LOCATION[0]="drivers/media/usb/uvc/"
